# KnightMare

./: .gitignore  AttackGen.cpp  AttackGen.h  CMakeLists.txt  MoveGeneration.cpp  MoveGeneration.h  README.md  board.cpp  board.h  constants.h  main.cpp  minmax.h  move.cpp  move.h  movegen.cpp  movegen.h  tests.cpp  tests.h  types.h  utils.cpp  utils.h
PreMatchComputations/: PreMatchAttackComputation.cpp  PreMatchAttackComputation.h
board/: Board.cpp  Board.h
search/legal_move_generation/: GenerateLeglMove.cpp  GenerateLeglMove.h  GeneratePseudoLegalMove.cpp  GeneratePseudoLegalMove.h  LegalMoveFilter.cpp  LegalMoveFilter.h  MoveFunctions.cpp  MoveFunctions.h
tests/: tests.cpp  tests.h
types_constants/: constants.h  types.h
utils/: utils.cpp  utils.h
